--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -17,7 +17,7 @@
         Дата публикации: {{ post.pub_date|date:"d E Y" }}
       </li>
     </ul>
-    <p>{{ post.text }}</p>    
+    <p>{{ post.text|linebreaksbr }}</p>    
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
 {% endblock %}
